--- a/lesson_3/style.css
+++ b/lesson_3/style.css
@@ -13,6 +13,7 @@ h1 {
     width: 100%;
     text-align: left;
 
+
 }
 
 h2 {
@@ -22,10 +23,22 @@ h2 {
     border-bottom: 1px solid #e5e5e5;
     width: 70%;
     text-align: left;
+
 }
 
-p{
+p {
     color: #e5e5e5;
     font-size: 16px;
     font-weight: 400;
+}
+
+.image {
+    background-image: url("https://www.visitbritain.com/sites/default/files/styles/wysiwyg_image/public/consumer/northamerica/arsenal_omgb.jpg?itok=_NYhKwhV");
+    height: 300px;
+    background-size: cover;
+    background-position: center;
+}
+
+.content {
+    padding: 30px;
 }
