--- a/Restaurant/css/style.css
+++ b/Restaurant/css/style.css
@@ -18,7 +18,6 @@
 
 .home {
     max-width: 1109px;
-
     margin: 0 auto;
     height: 100vh;
 
@@ -64,6 +63,10 @@
     width: 190px;
     flex-direction: column;
     margin-left: 34px;
+}
+
+.phone__text{
+    line-height: 22px;
 }
 
 .wrap .phone__number {
@@ -136,6 +139,19 @@
     align-items: center;
 }
 
+.button__header{
+    background: linear-gradient(45deg, rgba(255,116,0,1) 0%, rgba(196,90,0,1) 100%);
+    color: white;
+    font-size: 14px;
+    font-weight: 600;
+    text-transform: uppercase;
+    line-height: 19px;
+    padding: 14px 19px;
+    cursor: pointer;
+    border-radius: 2px;
+    margin-top: 20px;
+}
+
 
 .benefits {
     display: flex;
@@ -153,17 +169,48 @@
 }
 
 .benefits__item {
-    min-width: 348px;
+    width: 348px;
     height: 328px;
     background-color: #fff;
     box-shadow: 0 8px 16px 0 rgba(34, 60, 80, 0.2);
     border-radius: 2px;
     display: flex;
-    justify-content: center;
-    padding: 48px;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px;
+    row-gap: 12px;
+    font-size: 26px;
+    text-align: center;
 }
 
 .benefits__item img{
     height: 86px;
     width: 86px;
 }
+
+.item__text{
+    height: 160px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+}
+
+.item__text_header{
+    font-size: 22px;
+    font-weight: 600;
+    color: #2C2C2C;
+}
+
+.item__text_p{
+    font-size: 18px;
+    color: #656363;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+.item__text_header span{
+    color: #BC9060;
+}
+
+
