--- a/Restaurant_bootstrap/css/style.css
+++ b/Restaurant_bootstrap/css/style.css
@@ -1,3 +1,38 @@
 .bg__image{
-    background: url("../images/hero image.png");
+    background: url("../images/hero image.png") no-repeat center/cover;
+    height: 100vh;
+}
+
+
+.btn-warning, .btn-warning:hover, .btn-warning:visited, .btn-warning:focus{
+    background-color: #FF7400;
+    border-color: #FF7400 ;
+    color: #fff;
+}
+
+.header-color{
+    color: #FF7400;
+}
+
+.marg{
+    margin-top: 10%;
+}
+
+.card-img-top{
+    height: 100px;
+    width: 100px;
+    justify-content: center;
+}
+
+.card__group{
+    height: 50vh;
+}
+
+.pos-rel{
+    position: relative;
+}
+
+.pos-abs{
+    position: absolute;
+    top: -100px;
 }
