--- a/Restaurant_bootstrap/css/style.css
+++ b/Restaurant_bootstrap/css/style.css
@@ -4,6 +4,7 @@
 }
 
 
+
 .btn-warning, .btn-warning:hover, .btn-warning:visited, .btn-warning:focus{
     background-color: #FF7400;
     border-color: #FF7400 ;
@@ -13,6 +14,8 @@
 .header-color{
     color: #FF7400;
 }
+
+
 
 .marg{
     margin-top: 10%;
@@ -41,8 +44,10 @@ h5 span{
     color: #BC9060;
 }
 
-.fs-1 {
+.font-family{
     font-family: 'Caveat', cursive;
-    font-weight: 600;
-    font-size: 72px;
+}
+
+.color-white{
+    color: #FFFFFF;
 }
