--- a/Final_project/css/style.css
+++ b/Final_project/css/style.css
@@ -15,6 +15,14 @@
     background-color: var(--dark_blue);
 }
 
+.header__info{
+    display: flex;
+    align-items: center;
+    column-gap: 68px;
+    padding-top: 32px;
+    margin-bottom: 42px;
+}
+
 .header__nav {
     padding-top: 12px;
     padding-bottom: 12px;
@@ -68,7 +76,232 @@
     font-size: 14px;
 }
 
+.time{
+    display: flex;
+    column-gap: 12px;
+    align-items: center;
+    font-size: 14px;
+    font-weight: 500;
+}
 
+
+.time__text span{
+    display: flex;
+    justify-content: end;
+    flex-direction: column;
+    align-items: end;
+}
+
+.street{
+    display: flex;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.call{
+    display: flex;
+    align-items: center;
+    column-gap: 50px;
+}
+
+
+.whatsapp{
+    display: flex;
+    align-items: center;
+    column-gap: 6px;
+    background-color: #E1EFD0;
+    padding: 8px 16px 8px 16px;
+    border-radius: 2px;
+}
+
+.whatsapp__text{
+    font-size: 12px;
+    font-weight: 500;
+}
+
+.phone{
+    text-align: end;
+}
+
+.phone__number{
+    font-size: 20px;
+    font-weight: 500;
+    color: var(--dark_blue);
+}
+
+.phone__form{
+    color: #0F2438;
+    font-size: 12px;
+    font-weight: 500;
+    text-decoration: underline;
+}
+
+.container__search{
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 20px;
+    align-items: center;
+}
+
+.search{
+    min-width: 547px;
+
+}
+
+.right__nav{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: var(--dark_blue);
+    font-weight: 500;
+    height: 28px;
+
+}
+
+.left__nav{
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.login, .favorite, .cart{
+    display: flex;
+
+    align-items: center;
+}
+
+.cart{
+    column-gap: 16px;
+}
+
+.cart__text{
+    font-size: 14px;
+    line-height: 14px;
+}
+
+.login, .favorite{
+    border-right: 2px solid #E1E5F8;
+    column-gap: 16px;
+    padding-right: 26px;
+    box-sizing: border-box;
+}
+
+.favorite, .cart{
+    padding-left: 26px;
+}
+
+.slider{
+    margin-top: 32px;
+}
+
+.actions{
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+}
+
+.action{
+
+    background-color: var(--color_light_grey);
+    border-radius: 10px;
+    height: 190px;
+    padding-left: 16px;
+    padding-top: 20px;
+}
+
+.action__sale{
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    color: #0F2438;
+}
+
+.action__info{
+    display: flex;
+    column-gap: 16px;
+    margin-top: 18px;
+}
+
+.action__info-h1{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 23px;
+    color: #0A1A2C;
+}
+
+.action__info-h2{
+    font-size: 12px;
+    line-height: 14px;
+    color: #525252;
+    margin-top: 6px;
+}
+
+.action__info-price{
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    color: #FFB800;
+    margin-top: 20px;
+}
+
+.action__info-price span{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+    text-decoration-line: line-through;
+    color: #C2C5DA;
+}
+
+.carousel-item img{
+    height: 390px;
+}
+
+
+.categories{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 2px solid #E1E5F8;
+    border-radius: 6px;
+    margin-top: 70px;
+}
+
+.categories__text{
+    padding-left: 30px;
+}
+
+.categories_h1{
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 28px;
+    display: flex;
+    align-items: center;
+    color: #0A1A2C;
+}
+
+.categories_h2{
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 24px;
+    color: #0A1A2C;
+    margin-top: 10px;
+    margin-bottom: 12px;
+}
+
+.categories_h2 span{
+    display: block;
+}
+
+
+.categories__row{
+    flex-direction: row;
+    flex-wrap: nowrap;
+    overflow: hidden;
+}
+
+.categories__img img{
+    margin: 20px;
+}
 
 
 
