--- a/lesson_Media_queries/homework/media.css
+++ b/lesson_Media_queries/homework/media.css
@@ -16,7 +16,7 @@
         font-size: 32px;
     }
 
-    .wr {
+    .header__info {
         padding: 0 20px 0 20px;
     }
 
@@ -50,7 +50,7 @@
         font-size: 18px;
     }
 
-    .wr {
+    .header__info {
         padding: 0 35px 0 35px;
     }
 
@@ -69,7 +69,7 @@
         font-size: 18px;
     }
 
-    .wr {
+    .header__info {
         padding: 0 35px 0 35px;
     }
 
