Add final project folder

--- a/Final_project/css/media.css
+++ b/Final_project/css/media.css
@@ -91,4 +91,11 @@
         padding: 16px;
     }
 
+    .button__row{
+        margin-top: 30px;
+        margin-bottom: 30px;
+        overflow: hidden;
+    }
+
+
 }
